draft-mcgrew-fundamental-ecc-04

--- a/draft-mcgrew-fundamental-ecc-04.html
+++ b/draft-mcgrew-fundamental-ecc-04.html
@@ -154,17 +154,17 @@
 <tr><td class="header">Network Working Group</td><td class="header">D. McGrew</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Cisco Systems</td></tr>
 <tr><td class="header">Intended status: Informational</td><td class="header">K. Igoe</td></tr>
-<tr><td class="header">Expires: November 22, 2010</td><td class="header">M. Salter</td></tr>
+<tr><td class="header">Expires: June 13, 2011</td><td class="header">M. Salter</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">National Security Agency</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">May 21, 2010</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">December 10, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />Fundamental Elliptic Curve Cryptography Algorithms<br />draft-mcgrew-fundamental-ecc-03.txt</h1>
+<h1><br />Fundamental Elliptic Curve Cryptography Algorithms<br />draft-mcgrew-fundamental-ecc-04.txt</h1>
 
 <h3>Abstract</h3>
 
 <p>
 This note describes the fundamental algorithms of Elliptic Curve
-Cryptography (ECC) as they are defined in some early references.
+Cryptography (ECC) as they were defined in some early references.
 These descriptions may be useful for implementing the
 fundamental algorithms without using any of the specialized methods
 that were developed in following years.  Only elliptic curves defined over
@@ -187,7 +187,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on November 22, 2010.</p>
+This Internet-Draft will expire on June 13, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -217,7 +217,7 @@ Modular Arithmetic<br />
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="#GROUP">2.2.</a>&nbsp;
 Group Operations<br />
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="#FIELD">2.3.</a>&nbsp;
-Finite Fields<br />
+The Finite Field Fp<br />
 <a href="#ECG">3.</a>&nbsp;
 Elliptic Curve Groups<br />
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor3">3.1.</a>&nbsp;
@@ -259,16 +259,16 @@ Signature Creation<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor13">5.4.3.</a>&nbsp;
 Signature Verification<br />
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor14">5.5.</a>&nbsp;
-Converting KT-IV signatures to KT-I signatures<br />
+Converting KT-IV Signatures to KT-I Signatures<br />
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="#AECESrat">5.6.</a>&nbsp;
 Rationale<br />
 <a href="#conversion">6.</a>&nbsp;
-Converting between integers and octet
-strings<br />
+Converting Between Integers and Octet
+Strings<br />
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor15">6.1.</a>&nbsp;
-Octet-string-to-integer conversion<br />
+Octet-String-to-Integer Conversion<br />
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor16">6.2.</a>&nbsp;
-Integer-to-octet-string conversion<br />
+Integer-to-Octet-String Conversion<br />
 <a href="#Interop">7.</a>&nbsp;
 Interoperability<br />
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor17">7.1.</a>&nbsp;
@@ -344,12 +344,12 @@ The adoption of ECC has been slower than had been anticipated,
 </p>
 <p>
 This note contains a description of the fundamental algorithms of ECC
-over fields with characteristic greater than three, based directly on
-original references.  Its intent is to provide the Internet community
-with a summary of the basic algorithms that predate any specialized or
-optimized algorithms, which can be used as a normative specification.
-The original descriptions and notations were followed as closely
-as possible.
+over finite fields with characteristic greater than three, based
+directly on original references.  Its intent is to provide the
+Internet community with a summary of the basic algorithms that predate
+any specialized or optimized algorithms.  The summary is detailed
+enough for use as a normative reference.  The original descriptions
+and notations were followed as closely as possible.
 
 </p>
 <p>
@@ -364,21 +364,22 @@ The specifics are itemized in
 </p>
 <p>
 The rest of the note is organized as follows.  <a class='info' href='#Mod'>Section&nbsp;2.1<span> (</span><span class='info'>Modular Arithmetic</span><span>)</span></a>,
-<a class='info' href='#GROUP'>Section&nbsp;2.2<span> (</span><span class='info'>Group Operations</span><span>)</span></a>, and <a class='info' href='#FIELD'>Section&nbsp;2.3<span> (</span><span class='info'>Finite Fields</span><span>)</span></a> furnish the
+<a class='info' href='#GROUP'>Section&nbsp;2.2<span> (</span><span class='info'>Group Operations</span><span>)</span></a>, and <a class='info' href='#FIELD'>Section&nbsp;2.3<span> (</span><span class='info'>The Finite Field Fp</span><span>)</span></a> furnish the
 necessary terminology and notation from modular arithmetic, group
 theory and the theory of finite fields, respectively.
 <a class='info' href='#ECG'>Section&nbsp;3<span> (</span><span class='info'>Elliptic Curve Groups</span><span>)</span></a> defines the groups based on elliptic curves over
 finite fields of characteristic greater than three.
-<a class='info' href='#ECDH'>Section&nbsp;4<span> (</span><span class='info'>Elliptic Curve Diffie-Hellman (ECDH)</span><span>)</span></a> presents the fundamental ECDH algorithm.
-<a class='info' href='#ECES'>Section&nbsp;5<span> (</span><span class='info'>Elliptic Curve ElGamal Signatures</span><span>)</span></a> presents elliptic curve versions of the ElGamal
-signature method.  The representation of integers as octet strings is
-specified in <a class='info' href='#conversion'>Section&nbsp;6<span> (</span><span class='info'>Converting between integers and octet strings</span><span>)</span></a>.  Sections 2 through 6,
-inclusive, contain all of the normative text (the text that defines
-the norm for implementations conforming to this specification), and
-all of the following sections are purely informative.
-Interoperability is discussed in <a class='info' href='#Interop'>Section&nbsp;7<span> (</span><span class='info'>Interoperability</span><span>)</span></a>.  Validation
-testing is described in <a class='info' href='#test'>Section&nbsp;8<span> (</span><span class='info'>Validating an Implementation</span><span>)</span></a>.  <a class='info' href='#IPR'>Section&nbsp;9<span> (</span><span class='info'>Intellectual Property</span><span>)</span></a>
-reviews intellectual property issues.  <a class='info' href='#SEC'>Section&nbsp;10<span> (</span><span class='info'>Security Considerations</span><span>)</span></a> summarizes
+<a class='info' href='#ECDH'>Section&nbsp;4<span> (</span><span class='info'>Elliptic Curve Diffie-Hellman (ECDH)</span><span>)</span></a> presents the fundamental Elliptic Curve
+Diffie-Hellman (ECDH) algorithm.  <a class='info' href='#ECES'>Section&nbsp;5<span> (</span><span class='info'>Elliptic Curve ElGamal Signatures</span><span>)</span></a> presents
+elliptic curve versions of the ElGamal signature method.  The
+representation of integers as octet strings is specified in
+<a class='info' href='#conversion'>Section&nbsp;6<span> (</span><span class='info'>Converting Between Integers and Octet Strings</span><span>)</span></a>.  Sections 2 through 6, inclusive, contain
+all of the normative text (the text that defines the norm for
+implementations conforming to this specification), and all of the
+following sections are purely informative.  Interoperability is
+discussed in <a class='info' href='#Interop'>Section&nbsp;7<span> (</span><span class='info'>Interoperability</span><span>)</span></a>.  Validation testing is
+described in <a class='info' href='#test'>Section&nbsp;8<span> (</span><span class='info'>Validating an Implementation</span><span>)</span></a>.  <a class='info' href='#IPR'>Section&nbsp;9<span> (</span><span class='info'>Intellectual Property</span><span>)</span></a> reviews
+intellectual property issues.  <a class='info' href='#SEC'>Section&nbsp;10<span> (</span><span class='info'>Security Considerations</span><span>)</span></a> summarizes
 security considerations.  <a class='info' href='#rng'>Appendix&nbsp;B<span> (</span><span class='info'>Random Integer Generation</span><span>)</span></a> describes random number
 generation, and other appendices provide clarifying details.
 
@@ -401,7 +402,7 @@ Mathematical Background</h3>
 
 <p>
 This section reviews mathematical preliminaries and establishes
-terminology and notation that is used below.
+terminology and notation that are used below.
 
 </p>
 <a name="Mod"></a><br /><hr />
@@ -464,7 +465,7 @@ Group Operations</h3>
 
 <p>
 This section establishes some terminology and notation for
-mathematical groups, which is needed later on.  Background references
+mathematical groups, which are needed later on.  Background references
 abound; see <a class='info' href='#D1966'>[D1966]<span> (</span><span class='info'>Deskins, W., &ldquo;Abstract Algebra,&rdquo; 1966.</span><span>)</span></a>, for example.
 
 </p>
@@ -485,7 +486,7 @@ unambiguous; any grouping of the terms gives the same result.
 The above definition of a group operation uses multiplicative
 notation.  Sometimes an alternative called additive notation is used,
 in which a * b is denoted as a + b, and a^N is denoted as N * a.  In
-multiplicative notation, g^N is called exponentiation, while the
+multiplicative notation, a^N is called exponentiation, while the
 equivalent operation in additive notation is called scalar
 multiplication.  In this document, multiplicative notation is used
 throughout for consistency.   <a class='info' href='#notation'>Appendix&nbsp;E<span> (</span><span class='info'>Additive and multiplicative notation</span><span>)</span></a> 
@@ -565,7 +566,7 @@ of <a class='info' href='#M1983'>[M1983]<span> (</span><span class='info'>Massey
 <a name="FIELD"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.2.3"></a><h3>2.3.&nbsp;
-Finite Fields</h3>
+The Finite Field Fp</h3>
 
 <p>
 This section establishes terminology and notation for finite fields
@@ -843,7 +844,7 @@ further information.
 Discriminant</h3>
 
 <p>
-For each elliptic curve group, the discriminant - 16*(4*a^3 + 27*b^2) 
+For each elliptic curve group, the discriminant -16*(4*a^3 + 27*b^2) 
 must be nonzero modulo p <a class='info' href='#S1986'>[S1986]<span> (</span><span class='info'>Silverman, J., &ldquo;The Arithmetic of Elliptic Curves,&rdquo; 1986.</span><span>)</span></a>; this requires
 that 
 </p>
@@ -895,7 +896,7 @@ a secret key.  It was originally defined in terms of operations in the
 multiplicative group of a field with a large prime characteristic.
 Massey <a class='info' href='#M1983'>[M1983]<span> (</span><span class='info'>Massey, J., &ldquo;Logarithms in finite cyclic groups - cryptographic issues,&rdquo; 1983.</span><span>)</span></a> observed that it can be easily
 generalized so that it is defined in terms of an arbitrary
-mathematical group.  Miller <a class='info' href='#M1985'>[M1985]<span> (</span><span class='info'>Miller, V., &ldquo;Use of elliptic curves in cryptography,&rdquo; 1985.</span><span>)</span></a> and Koblitz <a class='info' href='#K1987'>[K1987]<span> (</span><span class='info'>Koblitz, N., &ldquo;Elliptic Curve Cryptosystems,&rdquo; 1987.</span><span>)</span></a> analyzed the DH protocol over an elliptic curve
+cyclic group.  Miller <a class='info' href='#M1985'>[M1985]<span> (</span><span class='info'>Miller, V., &ldquo;Use of elliptic curves in cryptography,&rdquo; 1985.</span><span>)</span></a> and Koblitz <a class='info' href='#K1987'>[K1987]<span> (</span><span class='info'>Koblitz, N., &ldquo;Elliptic Curve Cryptosystems,&rdquo; 1987.</span><span>)</span></a> analyzed the DH protocol over an elliptic curve
 group.  We describe DH following the former reference.
 
 </p>
@@ -977,7 +978,7 @@ The ElGamal signature algorithm was introduced in 1984
 problem, and was originally defined for the multiplicative group of
 the integers modulo a large prime number.  It is straightforward to
 extend it to use other finite groups, such as the multiplicative group
-of the field GF(2^w) <a class='info' href='#AMV1990'>[AMV1990]<span> (</span><span class='info'>Agnew, G., Mullin, R., and S. Vanstone, &ldquo;Improved Digital Signature Scheme based on Discrete Exponentiation,&rdquo; July, 1990.</span><span>)</span></a> or an elliptic curve
+of the finite field GF(2^w) <a class='info' href='#AMV1990'>[AMV1990]<span> (</span><span class='info'>Agnew, G., Mullin, R., and S. Vanstone, &ldquo;Improved Digital Signature Scheme based on Discrete Exponentiation,&rdquo; July, 1990.</span><span>)</span></a> or an elliptic curve
 group <a class='info' href='#A1992'>[A1992]<span> (</span><span class='info'>Anderson, J., &ldquo;Response to the proposed DSS,&rdquo; July&nbsp;1992.</span><span>)</span></a>.
 
 
@@ -1124,8 +1125,8 @@ are non-negative integers.
 Signature Verification</h3>
 
 <p>
-Given the message m, the public key Y, and the signature (s1, s2)
-verification is as follows:
+Given the message m, the generator g, the group order q, the public
+key Y, and the signature (s1, s2) verification is as follows:
 </p>
 <ol class="text">
 <li>
@@ -1285,7 +1286,7 @@ verification is as follows:
 <a name="anchor14"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.5.5"></a><h3>5.5.&nbsp;
-Converting KT-IV signatures to KT-I signatures</h3>
+Converting KT-IV Signatures to KT-I Signatures</h3>
 
 <p>
 A KT-IV signature for a message m and a public key Y can easily be
@@ -1358,9 +1359,12 @@ as described under the heading "Fifth generalization".
 
 </p>
 <p>
-No hash function is shown in the above equations, but as described in
-<a class='info' href='#existential'>Section&nbsp;10.4<span> (</span><span class='info'>Signatures</span><span>)</span></a>, a hash function should be applied to the message prior to
-signing in order to prevent existential forgery attacks.
+In the above equations, we rely on the implicit conversion of the
+message m from a bit string to an integer.  No hash function is shown
+in these equations, but as described in
+<a class='info' href='#existential'>Section&nbsp;10.4<span> (</span><span class='info'>Signatures</span><span>)</span></a>, a hash function should be applied to the
+message prior to signing in order to prevent existential forgery
+attacks.
 
 </p>
 <p>
@@ -1402,8 +1406,8 @@ In this note, we use the simplifying convention that q' = q.
 <a name="conversion"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.6"></a><h3>6.&nbsp;
-Converting between integers and octet
-strings</h3>
+Converting Between Integers and Octet
+Strings</h3>
 
 <p>
 A method for the conversion between integers and octet strings is
@@ -1418,7 +1422,7 @@ defined in this note.
 <a name="anchor15"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.6.1"></a><h3>6.1.&nbsp;
-Octet-string-to-integer conversion</h3>
+Octet-String-to-Integer Conversion</h3>
 
 <p>
 The octet string S shall be converted to an integer x as follows. Let
@@ -1442,7 +1446,7 @@ Note: the integer x satisfies 0 &lt;= x &lt; 2^(8*k).
 <a name="anchor16"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.6.2"></a><h3>6.2.&nbsp;
-Integer-to-octet-string conversion</h3>
+Integer-to-Octet-String Conversion</h3>
 
 <p>
 The integer x shall be converted to an octet string S of length k
@@ -1489,7 +1493,7 @@ uses an affine coordinate representation of the public key
 and uses neither the compact output nor the compact representation
 of <a class='info' href='#REP'>Section&nbsp;4.2<span> (</span><span class='info'>Compact Representation</span><span>)</span></a>.
 <a class='info' href='#RFC4753'>[RFC4753]<span> (</span><span class='info'>Fu, D. and J. Solinas, &ldquo;ECP Groups For IKE and IKEv2,&rdquo; January&nbsp;2007.</span><span>)</span></a> describes data formats that are compatible 
-with those of <a class='info' href='#conversion'>Section&nbsp;6<span> (</span><span class='info'>Converting between integers and octet strings</span><span>)</span></a>.
+with those of <a class='info' href='#conversion'>Section&nbsp;6<span> (</span><span class='info'>Converting Between Integers and Octet Strings</span><span>)</span></a>.
  
 Note that some groups indicate that the curve parameter "a" is
 negative; these values are to be interpreted modulo the order of the
@@ -1753,7 +1757,7 @@ been patented in recent years.
 <p>
 All of the normative references for ECDH (as defined in
 <a class='info' href='#ECDH'>Section&nbsp;4<span> (</span><span class='info'>Elliptic Curve Diffie-Hellman (ECDH)</span><span>)</span></a>) were published during or before 1989, and those
-for KT-I were published during or before May, 1994.  All of the
+for KT-I were published during or before May 1994.  All of the
 normative text for these algorithms is based solely on their
 respective references.
 
@@ -1991,7 +1995,8 @@ The author expresses his thanks to the originators of elliptic curve
 cryptography, whose work made this note possible, and all of the
 reviewers, who provided valuable constructive feedback.   Thanks
 are especially due to Howard Pinder, Andrey Jivsov, Alfred Hoenes (who
-contributed the algorithms in <a class='info' href='#pseudocode'>Appendix&nbsp;F<span> (</span><span class='info'>Algorithms</span><span>)</span></a>), and Dan Harkins.
+contributed the algorithms in <a class='info' href='#pseudocode'>Appendix&nbsp;F<span> (</span><span class='info'>Algorithms</span><span>)</span></a>), Dan Harkins, and
+Tina Tsou.
 
 </p>
 <a name="rfc.references"></a><br /><hr />
