draft-ietf-sieve-notify-sip-message-07

--- a/draft-ietf-sieve-notify-sip-message-07.html
+++ b/draft-ietf-sieve-notify-sip-message-07.html
@@ -406,7 +406,7 @@
 <td class="right">Q. Sun</td>
 </tr>
 <tr>
-<td class="left">Expires: April 06, 2012</td>
+<td class="left">Expires: April 10, 2012</td>
 <td class="right">B. Leiba</td>
 </tr>
 <tr>
@@ -419,7 +419,7 @@
 </tr>
 <tr>
 <td class="left"></td>
-<td class="right">October 04, 2011</td>
+<td class="right">October 08, 2011</td>
 </tr>
 
     	
@@ -427,7 +427,7 @@
   </table>
 
   <p class="title">Sieve Notification Mechanism: SIP MESSAGE<br />
-  <span class="filename">draft-ietf-sieve-notify-sip-message-06</span></p>
+  <span class="filename">draft-ietf-sieve-notify-sip-message-07</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This document describes a profile of the Sieve extension for notifications, to allow notifications to be sent over SIP MESSAGE.</p>
@@ -435,7 +435,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on April 06, 2012.</p>
+<p>This Internet-Draft will expire on April 10, 2012.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -497,7 +497,7 @@
 <a href="#rfc.section.1">1.</a> Introduction</h1>
 <h1 id="rfc.section.1.1">
 <a href="#rfc.section.1.1">1.1.</a> Overview</h1>
-<p id="rfc.section.1.1.p.1">The <a href="#RFC5435">Notify extension</a> <cite title="NONE">[RFC5435]</cite> to the <a href="#RFC5228">Sieve mail filtering language</a> <cite title="NONE">[RFC5228]</cite> is a framework for providing notifications by employing URIs that specify the notification mechanism.  This document defines how Session Initiation Protocol (SIP) URIs <a href="#RFC3261">RFC 3261</a> <cite title="NONE">[RFC3261]</cite> are used to generate notifications via SIP MESSAGE <a href="#RFC3428">RFC 3428</a> <cite title="NONE">[RFC3428]</cite>.  </p>
+<p id="rfc.section.1.1.p.1">The <a href="#RFC5435">Notify extension</a> <cite title="NONE">[RFC5435]</cite> to the <a href="#RFC5228">Sieve mail filtering language</a> <cite title="NONE">[RFC5228]</cite> is a framework for providing notifications by employing URIs that specify the notification mechanism.  (See RFC 5435 for details about the motivation and use cases.) This document defines how Session Initiation Protocol (SIP) URIs <a href="#RFC3261">RFC 3261</a> <cite title="NONE">[RFC3261]</cite> are used to generate notifications via SIP MESSAGE <a href="#RFC3428">RFC 3428</a> <cite title="NONE">[RFC3428]</cite>.  </p>
 <h1 id="rfc.section.1.2">
 <a href="#rfc.section.1.2">1.2.</a> Terminology</h1>
 <p id="rfc.section.1.2.p.1">The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted as described in <a href="#RFC2119">RFC 2119</a> <cite title="NONE">[RFC2119]</cite>.  </p>
@@ -507,12 +507,22 @@
 <p id="rfc.section.2.p.1">The SIP MESSAGE mechanism defined in this document results in the sending of a SIP MESSAGE request to notify a recipient about an email message.  </p>
 <h1 id="rfc.section.2.1">
 <a href="#rfc.section.2.1">2.1.</a> Notify parameter "method"</h1>
-<p id="rfc.section.2.1.p.1">The "method" parameter MUST be a URI that conforms to the SIP or SIPS URI scheme (as specified in <a href="#RFC3261">RFC 3261</a> <cite title="NONE">[RFC3261]</cite>) and that identifies a SIP or SIPS recipient of the notification.  The URI MAY include the resource identifier portion of a SIP address and URI parameters.  The URI parameter "method" MUST be included and MUST contain the value "MESSAGE".  (Note that future specifications might extend this document and define Sieve notifications that use other SIP methods.) The processing application MUST form a request according to the rules specified in <a href="#RFC3261">RFC 3261</a> <cite title="NONE">[RFC3261]</cite>.  </p>
-<p id="rfc.section.2.1.p.2">Note that other URI schemes can also trigger SIP processing, but only SIP and SIPS are defined here.  Future extensions might define other notification methods using SIP, using other URI schemes.  </p>
+<p id="rfc.section.2.1.p.1">The "method" parameter MUST be a URI that conforms to the SIP or SIPS URI scheme (as specified in <a href="#RFC3261">RFC 3261</a> <cite title="NONE">[RFC3261]</cite>) and that identifies a SIP or SIPS recipient of the notification.  The URI MAY include the resource identifier portion of a SIP address and URI parameters.  The URI MUST include the URI parameter "method", with the value "MESSAGE".  Example: </p>
+<p></p>
+
+<ul class="empty">
+<li>notify "sip:romeo@example.com;method=MESSAGE"</li>
+<li>-------------- </li>
+</ul>
+
+<p> </p>
+<p id="rfc.section.2.1.p.3">Note that future specifications might extend this document and define Sieve notifications that use SIP methods other than "MESSAGE".  </p>
+<p id="rfc.section.2.1.p.4">The processing application MUST form a request according to the rules specified in <a href="#RFC3261">RFC 3261</a> <cite title="NONE">[RFC3261]</cite>.  </p>
+<p id="rfc.section.2.1.p.5">Note that other URI schemes can also trigger SIP processing, but only SIP and SIPS are defined here.  Future extensions might define other Sieve notification methods that use SIP through other URI schemes.  </p>
 <h1 id="rfc.section.2.2">
 <a href="#rfc.section.2.2">2.2.</a> <a href="#from-tag" id="from-tag">Notify tag ":from"</a>
 </h1>
-<p id="rfc.section.2.2.p.1">The value of the ":from" tag MUST use the SIP "From" header field syntax; if the :from value is specified, has valid syntax, and is valid according to the implementation-specific security checks (see Section 3.3 of Sieve Notify <a href="#RFC5435">[RFC5435]</a>), then the notification SHOULD include the "From" SIP header field containing the value of the :from notify tag. If the specified value is not valid, then it is ignored.  </p>
+<p id="rfc.section.2.2.p.1">The value of the ":from" tag MUST use the SIP "From" header field syntax; if the ":from" value is specified, has valid syntax, and is valid according to the implementation-specific security checks (see Section 3.3 of Sieve Notify <a href="#RFC5435">[RFC5435]</a>), then the notification SHOULD include the "From" SIP header field containing the value of the ":from" notify tag. If the specified value is not valid, then it is ignored.  </p>
 <p id="rfc.section.2.2.p.2">All SIP authentication, including challenges and client certificates, SHOULD be done in the context of the Sieve engine -- the Sieve engine is the identity being authenticated.  This avoids security issues associated with the Sieve engine's having access to the end user's SIP authentication credentials.  The Sieve engine MAY use server-wide credentials (including applicable certificates) that are the same for all scripts.  Alternatively, it MAY, for auditing purposes, use different sets of Sieve-engine credentials when operating on behalf of different users.  </p>
 <p id="rfc.section.2.2.p.3">See section 22 of RFC 3261 <a href="#RFC3261">[RFC3261]</a> for more information about SIP authentication.  </p>
 <h1 id="rfc.section.2.3">
@@ -524,18 +534,18 @@
 <h1 id="rfc.section.2.5">
 <a href="#rfc.section.2.5">2.5.</a> <a href="#message-tag" id="message-tag">Notify tag ":message"</a>
 </h1>
-<p id="rfc.section.2.5.p.1">If the ":message" tag is included, it MUST be transformed into the message-body of a SIP MESSAGE, which MUST have Content-Type value of "text/plain" with CHARSET="UTF-8".  If the ":message" tag is not included, a default message will be used.  The default message body SHOULD contain the values of the "From" and "Subject" header fields of the triggering email message (and MAY include the value of the ":importance" tag, if one is specified), as shown in <a href="#Example2">Section 3.2</a> below.  </p>
+<p id="rfc.section.2.5.p.1">If the ":message" tag is included, it MUST be transformed into the message-body of a SIP MESSAGE, which MUST have Content-Type value of "text/plain" with CHARSET="UTF-8".  If the ":message" tag is not included, a default message will be used.  The default message body SHOULD contain the values of the "From" and "Subject" header fields of the triggering email message, because this information will be useful to users receiving notifications (but see the Security Considerations, <a href="#security">Section 5</a>).  The default body might also include the value of the ":importance" tag, if one is specified), as shown in <a href="#Example2">Section 3.2</a> below.  </p>
 <p id="rfc.section.2.5.p.2">Note that in no case is the actual triggering message body included in the notification.  </p>
 <p id="rfc.section.2.5.p.3">Implementations MUST comply with the SIP MESSAGE size limits, as discussed in section 8 of RFC 3428 <a href="#RFC3428">[RFC3428]</a>.  </p>
 <h1 id="rfc.section.2.6">
 <a href="#rfc.section.2.6">2.6.</a> <a href="#other-req" id="other-req">Other Definitions</a>
 </h1>
-<p id="rfc.section.2.6.p.1">An implementation MUST ignore any URI parameter it does not understand (the URI MUST be processed as if the parameter were not present).  Implementations SHOULD NOT use the hname "body" parameter value as the message-body of the SIP MESSAGE request.  If the hname "body" parameter and ":message" tag are present at the same time, the "body" parameter MUST be ignored.  </p>
-<p id="rfc.section.2.6.p.2">If the notification request fails, there will be a SIP error code describing the failure.  The policy for retrying delivery of failed notifications is specified in RFC 3261 <a href="#RFC3261">[RFC3261]</a>, according to the error code.  In other words, unlike the situation with some other Sieve notification methods, retries for SIP MESSAGE notifications are controlled by the notification protocol itself (SIP).  </p>
+<p id="rfc.section.2.6.p.1">An implementation MUST ignore any URI parameter it does not understand (the URI MUST be processed as if the parameter were not present).  This specification prefers use of the ":message" tag over the hname "body" parameter value as the message-body of the SIP MESSAGE request.  Implementations are advised to use ":message", and, in particular, if the hname "body" parameter and ":message" tag are present at the same time, the "body" parameter MUST be ignored.  </p>
+<p id="rfc.section.2.6.p.2">The policy for retrying delivery of failed notifications is specified in RFC 3261 [RFC3261], according to the SIP error code returned during an attempt to deliver a SIP notification.  In other words, unlike the situation with some other Sieve notification methods, retries for SIP MESSAGE notifications are controlled by the notification protocol itself (SIP).  </p>
 <h1 id="rfc.section.2.7">
 <a href="#rfc.section.2.7">2.7.</a> <a href="#notify_method_capability" id="notify_method_capability">Test notify_method_capability</a>
 </h1>
-<p id="rfc.section.2.7.p.1">Because, absent use of SIP extensions such as <a href="#RFC3856">[RFC3856]</a>, it is impossible to tell in advance whether the notification recipient is online and able to receive a SIP MESSAGE, the notify_method_capability test for "online" will always return "maybe" for this notification method.  </p>
+<p id="rfc.section.2.7.p.1">Absent use of SIP extensions such as <a href="#RFC3856">[RFC3856]</a>, it is impossible to tell in advance whether the notification recipient is online and able to receive a SIP MESSAGE.  Expect the notify_method_capability test for "online" to frequently return "maybe" for this notification method.  </p>
 <h1 id="rfc.section.3">
 <a href="#rfc.section.3">3.</a> Examples</h1>
 <p id="rfc.section.3.p.1">In the following examples, the sender of the email has an address of juliet@example.org, the entity to be notified has a SIP address of &lt;sip:romeo@example.com&gt;, and the notification service has a SIP address &lt;sip:notifier@example.com&gt;.  </p>
