--- a/draft-hammer-hostmeta-17.html
+++ b/draft-hammer-hostmeta-17.html
@@ -403,8 +403,8 @@
 <td class="right">B. Cook</td>
 </tr>
 <tr>
-<td class="left">Expires: November 21, 2011</td>
-<td class="right">May 20, 2011</td>
+<td class="left">Expires: March 18, 2012</td>
+<td class="right">September 15, 2011</td>
 </tr>
 
     	
@@ -412,7 +412,7 @@
   </table>
 
   <p class="title">Web Host Metadata<br />
-  <span class="filename">draft-hammer-hostmeta-16</span></p>
+  <span class="filename">draft-hammer-hostmeta-17</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This specification describes a method for locating host metadata as well as information about individual resources controlled by the host.  </p>
@@ -422,7 +422,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on November 21, 2011.</p>
+<p>This Internet-Draft will expire on March 18, 2012.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -476,10 +476,10 @@
 
   <h1 id="rfc.section.1">
 <a href="#rfc.section.1">1.</a> Introduction</h1>
-<p id="rfc.section.1.p.1">Web-based protocols often require the discovery of host policy or metadata, where "host" is not a single resource but the entity controlling the collection of resources identified by Uniform Resource Identifiers (URI) with a common URI host <a href="#RFC3986">[RFC3986]</a>.  </p>
+<p id="rfc.section.1.p.1">Web-based protocols often require the discovery of host policy or metadata, where "host" is not a single resource but the entity controlling the collection of resources identified by Uniform Resource Identifiers (URI) with a common URI host <a href="#RFC3986">[RFC3986]</a>, which can be served by one or more servers </p>
 <p id="rfc.section.1.p.2">While web protocols have a wide range of metadata needs, they often use metadata that is concise, has simple syntax requirements, and can benefit from storing their metadata in a common location used by other related protocols.  </p>
 <p id="rfc.section.1.p.3">Because there is no URI or representation available to describe a host, many of the methods used for associating per-resource metadata (such as HTTP headers) are not available. This often leads to the overloading of the root HTTP resource (e.g. 'http://example.com/') with host metadata that is not specific or relevant to the root resource itself.  </p>
-<p id="rfc.section.1.p.4">This specification registers the well-known URI suffix <samp>host-meta</samp> in the Well-Known URI Registry established by <a href="#RFC5785">[RFC5785]</a>, and specifies a simple, general-purpose metadata document format for hosts, to be used by multiple web-based protocols.  </p>
+<p id="rfc.section.1.p.4">This document defines a lightweight metadata document format for describing hosts (thus the name "host-meta"), intended for use by web-based protocols. This document also registers the well-known URI suffix <samp>host-meta</samp> in the Well-Known URI Registry established by <a href="#RFC5785">[RFC5785]</a>.  </p>
 <p id="rfc.section.1.p.5">In addition, there are times when a host-wide scope for policy or metadata is too coarse-grained. host-meta provides two mechanisms for providing resource-specific information: </p>
 
 <ul>
@@ -554,7 +554,7 @@
    href='http://example.com/author?q=http%3A%2F%2Fexample.com%2Fxy' /&gt;
 
             </pre>
-<p id="rfc.section.1.1.1.p.2">The LRDD document for 'http://example.com/xy' is obtained using an HTTP <samp>GET</samp> request: </p>
+<p id="rfc.section.1.1.1.p.2">The LRDD document for 'http://example.com/xy' (obtained via an HTTP <samp>GET</samp> request): </p>
 <div id="#rfc.figure.3"></div>
 <pre>
               
@@ -603,13 +603,13 @@
 <p id="rfc.section.1.1.1.p.5">On the other hand, the <samp>author</samp> link found in the LRDD document has a higher priority than the link found in the host-meta document because it appears after the <samp>lrdd</samp> link.  </p>
 <h1 id="rfc.section.1.2">
 <a href="#rfc.section.1.2">1.2.</a> Notational Conventions</h1>
-<p id="rfc.section.1.2.p.1">The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted as described in <a href="#RFC2119">[RFC2119]</a>.  </p>
+<p id="rfc.section.1.2.p.1">The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "NOT RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted as described in <a href="#RFC2119">[RFC2119]</a>.  </p>
 <p id="rfc.section.1.2.p.2">This document uses the Augmented Backus-Naur Form (ABNF) notation of <a href="#RFC5234">[RFC5234]</a>.  Additionally, the following rules are included from <a href="#RFC3986">[RFC3986]</a>: reserved, unreserved, and pct-encoded.  </p>
 <h1 id="rfc.section.2">
 <a href="#rfc.section.2">2.</a> Obtaining host-meta Documents</h1>
 <p id="rfc.section.2.p.1">The client obtains the host-meta document for a given host by sending an HTTP <a href="#RFC2616">[RFC2616]</a> or an HTTPS <a href="#RFC2818">[RFC2818]</a> GET request to the host for the <samp>/.well-known/host-meta</samp> path, using the default ports defined for each protocol (e.g. port 80 for HTTP and port 443 for HTTPS). The scope and meaning of host-meta documents obtained via other protocols or ports is undefined.  </p>
 <p id="rfc.section.2.p.2">The server MUST support at least one protocol but MAY support both. If both protocols are supported, they MUST produce the same document.  </p>
-<p id="rfc.section.2.p.3">The decision which protocol is used to obtain the host-meta document have significant security ramifications as described in <a href="#security">Section 5</a>.  </p>
+<p id="rfc.section.2.p.3">The decision as to which protocol is used to obtain the host-meta document has significant security ramifications as described in <a href="#security">Section 5</a>.  </p>
 <div id="#rfc.figure.5"></div>
 <p>For example, the following request is used to obtain the host-meta document for the 'example.com' host: </p>
 <pre>
@@ -618,15 +618,14 @@
   Host: example.com
   
         </pre>
-<p id="rfc.section.2.p.4">If the server response indicates that the host-meta resource is located elsewhere (a 301, 302, or 307 response status code), the client MUST try to obtain the resource from the location provided in the response. This means that the host-meta document for one host MAY be retrieved from another host. Likewise, if the resource is not available or does not exist (e.g. a 404 or 410 response status codes) using both the HTTP and HTTPS protocols, the client should infer that metadata is not available via this mechanism.  </p>
-<p id="rfc.section.2.p.5">The host-meta document SHOULD be served with the <samp>application/xrd+xml</samp> media type. [[ media type registration pending ]] </p>
+<p id="rfc.section.2.p.4">If the server response indicates that the host-meta resource is located elsewhere (a 301, 302, or 307 response status code), the client SHOULD try to obtain the resource from the location provided in the response. This means that the host-meta document for one host MAY be retrieved from another host. Likewise, if the resource is not available or does not exist (e.g. a 404 or 410 response status codes), the client should infer that metadata is not available via this mechanism.  </p>
+<p id="rfc.section.2.p.5">The host-meta document SHOULD be served with the <samp>application/xrd+xml</samp> media type.  </p>
 <h1 id="rfc.section.3">
 <a href="#rfc.section.3">3.</a> The host-meta Document</h1>
-<p id="rfc.section.3.p.1">The host-meta document uses the XRD 1.0 document format as defined by <a href="#OASIS.XRD-1.0">[OASIS.XRD-1.0]</a>, which provides a simple and extensible XML-based schema for describing resources. This specification defines additional processing rules needed to describe hosts. Documents MAY include any XRD element not explicitly excluded.  </p>
+<p id="rfc.section.3.p.1">The host-meta document uses the XRD 1.0 document format as defined by <a href="#OASIS.XRD-1.0">[OASIS.XRD-1.0]</a>, which provides a simple and extensible XML-based schema for describing resources. This specification defines additional processing rules needed to describe hosts. Documents MAY include any elements included in the XRD 1.0 schema which are not explicitly excluded by this specification.  </p>
 <p id="rfc.section.3.p.2">The server MAY offer alternative representations of any XRD document it serves (host-meta, LRDD, or other XRD-based documents). The client MAY request a particular representation using the HTTP <samp>Accept</samp> request header field. If no <samp>Accept</samp> request header field is included with the request, or if the client requests a <samp>application/xrd+xml</samp> representation, the server MUST respond using the REQUIRED XRD 1.0 XML representation described in <a href="#format">Section 3.1</a>.  </p>
-<p id="rfc.section.3.p.3">The XRD 1.0 XML representation is the only canonical representation for any XRD document.  If there is any discrepancy between the content of the XRD 1.0 XML representation and any other representation for the same resource, the client MUST only use the XRD 1.0 XML representation.  </p>
-<p id="rfc.section.3.p.4">Applications using the host-meta document MAY require the server to provide a specific alternative representation in addition to the XRD 1.0 XML representation when explicitly requested by the client.  </p>
-<p id="rfc.section.3.p.5">A JavaScript Object Notation (JSON) XRD 1.0 representation is described in <a href="#json">[json]</a>. It is RECOMMENDED that servers offer the JRD representation in addition to the XRD representation.  </p>
+<p id="rfc.section.3.p.3">Applications using the host-meta document MAY require the server to provide a specific alternative representation in addition to the XRD 1.0 XML representation when explicitly requested by the client.  </p>
+<p id="rfc.section.3.p.4">JRD - A JavaScript Object Notation (JSON) XRD 1.0 representation is described in <a href="#json">[json]</a>. It is RECOMMENDED that servers offer the JRD representation in addition to the XRD representation.  </p>
 <h1 id="rfc.section.3.1">
 <a href="#rfc.section.3.1">3.1.</a> <a href="#format" id="format">XML Document format</a>
 </h1>
@@ -712,7 +711,7 @@
 </h1>
 <p id="rfc.section.5.p.1">The host-meta document is designed to be used by other applications explicitly "opting-in" to use the facility. Therefore, any such application MUST review the specific security implications of using host-meta documents. By itself, this specification does not provide any protections or guarantees that any given host-meta document is under the control of the appropriate entity as required by each application.  </p>
 <p id="rfc.section.5.p.2">The metadata returned by the host-meta resource is presumed to be under the control of the appropriate authority and representative of all the resources described by it. If this resource is compromised or otherwise under the control of another party, it may represent a risk to the security of the server and data served by it, depending on the applications using it.  </p>
-<p id="rfc.section.5.p.3">Applications utilizing the host-meta document for sensitive or security related information MUST require the use of the HTTPS protocol and MUST NOT produce a host-meta document using other means. In addition, such applications MUST require that any redirection leading to the retrieval of a host-meta document also utilize the HTTPS protocol.  </p>
+<p id="rfc.section.5.p.3">Applications utilizing the host-meta document where the authenticity of the information is necessary MUST require the use of the HTTPS protocol and MUST NOT produce a host-meta document using other means. In addition, such applications MUST require that any redirection leading to the retrieval of a host-meta document also utilize the HTTPS protocol.  </p>
 <p id="rfc.section.5.p.4">Since the host-meta document is authoritative for the entire host, not just the authority (combination of scheme, host, and port) of the host-meta document server, applications MUST ensure that using a host-meta document for another URI authority does not represent a potential security exploit.  </p>
 <p id="rfc.section.5.p.5">Protocols using host-meta templates must evaluate the construction of their templates as well as any protocol-specific variables or syntax to ensure that the templates cannot be abused by an attacker. For example, a client can be tricked into following a malicious link due to a poorly constructed template which produces unexpected results when its variable values contain unexpected characters.  </p>
 <h1 id="rfc.section.6">
